# sb-easy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum
.github/workflows/: ci.yml
agent/: .env.example  Cargo.toml
agent/src/: main.rs
backend/: Cargo.toml
backend/src/: agent_mode.rs  auth.rs  config.rs  db.rs  error.rs  main.rs  util.rs
backend/src/api/: agent.rs  auth.rs  config_download.rs  hosts.rs  mod.rs  proxy_nodes.rs  router.rs  settings.rs  singbox_proxy.rs  singbox_ws.rs  subscriptions.rs  system.rs  users.rs  wireguard.rs
backend/src/models/: host.rs  mod.rs  proxy_node.rs  setting.rs  subscription.rs  wireguard.rs
backend/src/services/: audit.rs  mod.rs  outbound_parser.rs  proxy_config.rs  self_agent.rs  server_log.rs  singbox_supervisor.rs  subscription.rs  telemetry.rs  uri_parser.rs  wireguard.rs  wireguard_nl.rs
cmd/sb-easy/: main.go
docs/: concepts.md  deployment.md  go-rewrite-plan.md  improvement-plan.md  multi-node-architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  realtime.ts
frontend/src/assets/: main.css
frontend/src/components/: AnimatedNumber.vue  HostManageModal.vue  HostSelect.vue  NmSelect.vue  RulesEditor.vue  SparkChart.vue
frontend/src/components/layout/: AppLayout.vue
frontend/src/composables/: hostTarget.ts  i18n.ts  theme.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  hosts.ts  proxyNodes.ts  subscriptions.ts  wireguard.ts
frontend/src/types/: index.ts
frontend/src/views/: ClientsView.vue  ConfigView.vue  DashboardView.vue  DeviceDetailView.vue  DevicesView.vue  HostsView.vue  LoginView.vue  LogsView.vue  MonitorView.vue  NodesView.vue  ProfilesView.vue  ProxiesView.vue  ServerLogsView.vue  SettingsView.vue  SubscriptionsView.vue  UsersView.vue
internal/auth/: auth.go
internal/config/: config.go
internal/db/: db.go
internal/server/: server.go
internal/singbox/: manager.go
migrations/: 001_initial.sql  002_quota_audit_roles.sql  003_multi_host.sql  004_host_commands.sql  005_profile_mode.sql  embed.go
scripts/: backup.sh
