[package]
name = "sb-easy-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
