[package]
name = "sb-easy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# workspace deps
tokio.workspace = true
tokio-tungstenite.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
url.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
qrcode.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-embed.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
x25519-dalek.workspace = true
futures = "0.3"
